--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-responsive": "^9.0.2",
     "use-debounce": "^10.0.0"
   },
   "devDependencies": {
