--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.5",
+    "@headlessui/react": "^1.7.18",
     "@tabler/icons-react": "^2.47.0",
     "@xata.io/client": "^0.29.0",
     "clsx": "^2.1.0",
+    "headlessui": "^0.0.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
