Updated header of study page. Added language switcher and restrict passage column from being null.

--- a/.xatarc
+++ b/.xatarc
@@ -1,5 +1,5 @@
 {
-  "databaseURL": "https://Sela-ab123i.us-east-1.xata.sh/db/main",
+  "databaseURL": "https://BiblePoetry-s-workspace-ab123i.us-east-1.xata.sh/db/main",
   "codegen": {
     "output": "src/xata.ts"
   }
