--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "use-debounce": "^10.0.0",
     "zod": "^3.22.4"
   },
