--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.0",
     "next": "14.1.0",
     "react": "^18",
+    "react-color": "^2.19.3",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "use-debounce": "^10.0.0",
