--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,10 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env*.local
+.env*
+
+# xata
+/.xata/
 
 # vercel
 .vercel
@@ -34,5 +37,3 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-
-.env
