--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "@tabler/icons-react": "^2.47.0",
     "@xata.io/client": "^0.29.5",
     "clsx": "^2.1.0",
-    "next": "14.1.0",
-    "react": "^18",
+    "next": "^14.2.6",
+    "react": "^18.3.1",
     "react-color": "^2.19.3",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.0.1",
     "tailwindcss-opentype": "^1.1.0",
     "use-debounce": "^10.0.0",
@@ -29,7 +29,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8.56.0",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-next": "^14.2.6",
     "postcss": "^8.4.34",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
