--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tabler/icons-react": "^2.47.0",
     "@xata.io/client": "^0.29.5",
     "clsx": "^2.1.0",
+    "mitt": "^3.0.1",
     "next": "^14.2.6",
     "react": "^18.3.1",
     "react-color": "^2.19.3",
