--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "mitt": "^3.0.1",
     "next": "^14.2.6",
     "react": "^18.3.1",
-    "react-color": "^2.19.3",
+    "react-color": "github:teamsela/react-color",
     "react-dom": "^18.3.1",
     "react-icons": "^5.0.1",
     "tailwindcss-opentype": "^1.1.0",
