--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^4.29.5",
     "@tabler/icons-react": "^2.47.0",
+    "@vercel/analytics": "^1.5.0",
     "@xata.io/client": "^0.29.5",
     "clsx": "^2.1.0",
     "mitt": "^3.0.1",
