--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react": "^18",
     "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18",
+    "@xata.io/cli": "^0.16.12",
     "autoprefixer": "^10.0.1",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.2.6",
