chore: remove syntax tests

--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "test:syntax": "tsx tests/Syntax/syntax.test.ts"
+    "lint": "next lint"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.5",
@@ -36,7 +35,6 @@
     "postcss": "^8.4.34",
     "react-color": "github:teamsela/react-color#master",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5",
-    "tsx": "^4.19.2"
+    "typescript": "^5"
   }
 }
