Removed package-lock.json and only use pnpm package manager

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "sela-webapp",
   "version": "0.1.0",
+  "packageManager": "pnpm@9.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
