--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "@clerk/nextjs": "^4.29.5",
     "@tabler/icons-react": "^2.47.0",
     "@vercel/analytics": "^1.5.0",
-    "@xata.io/client": "^0.29.5",
     "clsx": "^2.1.0",
+    "drizzle-orm": "^0.38.2",
     "mitt": "^3.0.1",
     "next": "^14.2.6",
+    "pg": "^8.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
